--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ theme = 'hextra'
 
 [languages]
   [languages.zh-cn]
-    languageName = "简体中文"
+    languageName = "中文"
     weight = 1
   [languages.en]
     languageName = "English"
