--- a/hugo.toml
+++ b/hugo.toml
@@ -69,3 +69,12 @@ theme = 'hextra'
     name = "Language Switcher"
     weight = 5
     params = { type = "language-switch", label = true, icon = "globe-alt" }
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        enable = true
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
+          inline = [['\(', '\)']]
