--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,10 @@ defaultContentLanguage = 'zh-cn'
 title = 'Above the Abstraction'
 theme = 'hextra'
 
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+
 [services]
   [services.googleAnalytics]
     ID = "G-MTW2ZB8K4E"
@@ -57,17 +61,21 @@ theme = 'hextra'
     pageRef = "/about"
     weight = 2
   [[menu.main]]
-    name = "Search"
+    name = "Tags"
+    pageRef = "/tags/"
     weight = 3
+  [[menu.main]]
+    name = "Search"
+    weight = 4
     params = { type = "search" }
   [[menu.main]]
     name = "GitHub"
     url = "https://github.com/myasuka/myasuka.github.io"
-    weight = 4
+    weight = 5
     params = { icon = "github" }
   [[menu.main]]
     name = "Language Switcher"
-    weight = 5
+    weight = 6
     params = { type = "language-switch", label = true, icon = "globe-alt" }
 
 [markup]
